--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
-APP_NAME="MyApp"
+APP_NAME="Jámbor Alexandra - Web3"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://myapp.test
+APP_URL=http://jalexandra-web3.test
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=myapp
+DB_DATABASE=jalexandra_web3
 DB_USERNAME=root
 DB_PASSWORD=
 
