Implemented checkout frontend

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
+    "/css/mix_checkout-user-form.css": "/css/mix_checkout-user-form.css",
     "/css/mix_products.css": "/css/mix_products.css"
 }
