--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/fortify": "^1.4",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
-        "livewire/livewire": "^2.4"
+        "livewire/livewire": "^2.4",
+        "silber/bouncer": "v1.0.0-rc.10"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
