--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
         "axios": "^0.19",
         "cross-env": "^7.0",
         "glob": "^7.1.6",
-        "laravel-mix": "^5.0.1",
+        "laravel-mix": "^6.0.19",
         "lodash": "^4.17.19",
+        "postcss": "^8.3.2",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.32.8",
-        "sass-loader": "^8.0.2",
-        "vue-template-compiler": "^2.6.12"
+        "sass-loader": "^12.1.0",
+        "vue-template-compiler": "^2.6.12",
+        "webpack": "^5.38.1",
+        "webpack-livereload-plugin": "^3.0.1"
     }
 }
